# modern_dbs

./: LICENSE  README.md
task-btree/: .gitignore  CMakeLists.txt  README.md
task-btree/bench/: local.cmake
task-btree/cmake/: clang-tidy.cmake
task-btree/include/: local.cmake
task-btree/include/moderndbs/: btree.h  buffer_manager.h  defer.h  hex_dump.h  segment.h
task-btree/src/: buffer_manager.cc  hex_dump.cc  local.cmake
task-btree/test/: btree_test.cc  local.cmake
task-btree/tools/: local.cmake
task-buffer-manager/: .gitignore  CMakeLists.txt  README.md
task-buffer-manager/include/: local.cmake
task-buffer-manager/include/moderndbs/: PID.h  buffer_manager.h
task-buffer-manager/src/: buffer_manager.cc  local.cmake
task-buffer-manager/test/: buffer_manager_test.cc  local.cmake
task-buffer-manager/tools/: local.cmake
task-expressions/: .clang-tidy  CMakeLists.txt  README.md  tpc-h-light.sql
task-expressions/bench/: bm_expression.cc  local.cmake
task-expressions/cmake/: clang-tidy.cmake
task-expressions/include/: local.cmake
task-expressions/include/moderndbs/: error.h
task-expressions/include/moderndbs/codegen/: examples.h  expression.h  jit.h
task-expressions/src/: local.cmake
task-expressions/src/codegen/: expression.cc  jit.cc
task-expressions/src/codegen/example/: printf.cc  printf.ll
task-expressions/test/: expression_test.cc  local.cmake  tester.cc
task-external-sort/: .gitignore  CMakeLists.txt  README.md
task-external-sort/include/: local.cmake
task-external-sort/include/moderndbs/: external_sort.h  file.h
task-external-sort/src/: external_sort.cc  local.cmake
task-external-sort/src/file/: posix_file.cc
task-external-sort/test/: external_sort_test.cc  local.cmake  tester.cc
task-external-sort/tools/: external_sort.cc  local.cmake
task-lock-manager/: CMakeLists.txt  README.md
task-lock-manager/include/: local.cmake
task-lock-manager/include/moderndbs/: lock_manager.h
task-lock-manager/src/: local.cmake  lock_manager.cc
task-lock-manager/test/: local.cmake  lock_manager_test.cc
task-operators/: CMakeLists.txt  README.md
task-operators/include/: local.cmake
task-operators/include/moderndbs/: algebra.h
task-operators/src/: algebra.cc  local.cmake
task-operators/test/: iterator_model_test.cc  local.cmake
task-operators/tools/: local.cmake
task-slotted-pages/: .clang-tidy  CMakeLists.txt  README.md
task-slotted-pages/include/: local.cmake
task-slotted-pages/include/buffer/: 2Q_replacer.h  buffer_frame.h  buffer_manager.h  replacer.h
task-slotted-pages/include/common/: config.h  file.h  rwlatch.h
task-slotted-pages/include/disk/: disk_manager.h
task-slotted-pages/include/slotted_page/: database.h  defer.h  error.h  schema.h  segment.h  slotted_page.h
task-slotted-pages/src/: local.cmake
task-slotted-pages/src/buffer/: 2Q_replacer.cc  buffer_manager.cc
task-slotted-pages/src/common/: posix_file.cc
task-slotted-pages/src/disk/: disk_manager.cc
task-slotted-pages/src/slotted_page/: database.cc  fsi_segment.cc  hex_dump.cc  schema.cc  schema_segment.cc  slotted_page.cc  sp_segment.cc
task-slotted-pages/test/: local.cmake  segment_test.cc  slotted_page_test.cc
task-slotted-pages/tools/: database_wrapper.cc  local.cmake
